bkp/sg.tf
resource "aws_security_group" "sg" {
  name   = "SG-${var.cluster_name}"
  vpc_id = data.aws_vpc.vpc.id

  #Inbound
  ingress {
    description = "HTTP"
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  #Inbound
  ingress {
    description = "HTTP"
    from_port = 8080
    to_port = 8080
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  #Inbound
  ingress {
    description = "HTTP"
    from_port = 30000
    to_port = 30000
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  #Outboun
  egress {
    description = "All"
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
